--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
           <div class="notifications-count">3</div>
           <div class="tooltip">Notifications</div>
         </div>
-        <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
+        <a href="grid.html">
+          <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
+        </a>
       </div>
     </header>
 
